[tool.poetry]
name = "ctmds"
version = "0.1.0"
description = ""
authors = ["Victor Sandoval <vs.software.eng@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.12"
numpy = "^2.2.2"
pydantic = "^2.10.6"
pytz = "^2025.1"
sqlalchemy = "^2.0.38"
aiosqlite = "^0.21.0"
loguru = "^0.7.3"
pydantic-settings = "^2.8.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.4"
pyright = "^1.1.393"
coverage = "^7.6.10"
typer = "^0.15.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
